--- a/package.json
+++ b/package.json
@@ -1,9 +1,24 @@
 {
   "name": "binance-smart-chain",
-  "packageManager": "yarn@4.6.0",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/defiveninth/binance-smart-chain.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/defiveninth/binance-smart-chain/issues"
+  },
+  "homepage": "https://github.com/defiveninth/binance-smart-chain#readme",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "dotenv": "^16.4.7",
     "hardhat": "^2.22.19"
   }
 }
